# fastapi-study-1

./: .gitignore  .pre-commit-config.yaml  TODO.md  pyproject.toml  ruff.toml
src/: alembic.ini  create_app.py  lifespan.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_23_1727-f08280997d1c_create_films_table.py  2025_05_27_1707-d8fa1fcfab4c_add_poster_field.py  2025_05_27_1846-6ca30f52cc52_create_genres_table.py  2025_05_27_1903-21d327548e3a_create_film_genre_association_table.py  2025_05_28_2042-0dc20c969ede_create_user_table.py  2025_05_29_1736-c410d006a3bb_create_access_token_table.py
src/api/: __init__.py  auth_router.py  base_crud.py
src/api/dependencies/: __init__.py  access_token.py  backend.py  fastapi_users_routers_helper.py  model_generic.py  session_dep.py  stategy.py  user_manager_dep.py  users_dep.py
src/api/dependencies/authentification/: access_token.py  backend.py  fastapi_users_routers_helper.py  model_generic.py  users_dep.py
src/api/films/: __init__.py  crud.py  forms.py  router.py  schemas.py
src/api/users/: router.py
src/core/: __init__.py  config.py  db_helper.py
src/core/authentication/: transport.py  user_manager.py
src/core/models/: __init__.py  access_token.py  base.py  film.py  film_genre_assoc.py  genre.py  user.py
src/core/models/mixins/: id_int_pk.py
src/templates/: base.html  index.html
src/templates/films/: index.html
src/templates/users/: login.html  register.html
src/utils/: __init__.py  dependency.py
